--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finding freelancer service</title>
+    <link rel="shortcut icon" href="./img/icons/logo.svg" type="image/x-icon" />
     <link rel="stylesheet" href="./css/style.css" />
     <script defer src="./js/main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="wrapper">
+        <a href="#" class="logo-box">
+          <img src="./img/icons/logo.svg" alt="logo" class="logo-image" />
+          <span class="logo-title">ZIRO</span>
+        </a>
+        <nav class="nav-bar">
+          <ul class="menu-container">
+            <li>
+              <a href="#" class="menu-item">Home</a>
+            </li>
+            <li>
+              <a href="#" class="menu-item">Pricing</a>
+            </li>
+            <li>
+              <a href="#" class="menu-item">Blog</a>
+            </li>
+            <li>
+              <a href="#" class="menu-item">Become a member </a>
+            </li>
+            <li>
+              <a href="#" class="menu-item">About Us</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="tools-box">
+          <div class="search-box">
+            <input
+              type="text"
+              class="search-input"
+              name="search-input"
+              placeholder="Search here...."
+            />
+            <a class="search-btn"></a>
+          </div>
+          <div class="auth-box">
+            <a href="#" class="sign-in">Login</a>
+            <span class="symbol">/</span>
+            <a href="#" class="sign-up">Sign Up</a>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
