Added 'Main-banner' section

--- a/src/index.html
+++ b/src/index.html
@@ -52,5 +52,26 @@
         </div>
       </div>
     </header>
+    <main>
+      <section class="main-banner">
+        <div class="wrapper">
+          <div class="content-box">
+            <h1 class="title">
+              Find out talented <span>freelancer</span> with better review faster.
+            </h1>
+            <p class="text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              exercitation ullamco laboris nisi ut aliquip.
+            </p>
+            <div class="buttons-box">
+              <a href="#" class="discover-btn">Discover Now</a>
+              <a href="#" class="watch-btn"><span class="icon-play"></span> Watch Demo</a>
+            </div>
+          </div>
+          <img src="./img/pictures/main-banner.png" alt="banner" class="picture" loading="lazy" />
+        </div>
+      </section>
+    </main>
   </body>
 </html>
