Added 'Start-find-job' section; Pluged boostrap

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,13 @@
     <header>
       <div class="wrapper">
         <a href="#" class="logo-box">
-          <img src="./img/icons/logo.svg" alt="logo" class="logo-image" />
+          <img
+            src="./img/icons/logo.svg"
+            alt="logo"
+            class="logo-image"
+            width="48px"
+            height="45px"
+          />
           <span class="logo-title">ZIRO</span>
         </a>
         <nav class="nav-bar">
@@ -69,7 +75,135 @@
               <a href="#" class="watch-btn"><span class="icon-play"></span> Watch Demo</a>
             </div>
           </div>
-          <img src="./img/pictures/main-banner.png" alt="banner" class="picture" loading="lazy" />
+          <img
+            src="./img/pictures/main-banner.png"
+            alt="banner"
+            class="picture"
+            loading="lazy"
+            width="568px"
+            height="523px"
+          />
+        </div>
+      </section>
+      <section class="start-find-job">
+        <div class="wrapper">
+          <div class="companies-logos-box">
+            <svg class="logo">
+              <use xlink:href="./img/sprites/companies-logos.svg#company-1"></use>
+            </svg>
+            <svg class="logo">
+              <use xlink:href="./img/sprites/companies-logos.svg#company-2"></use>
+            </svg>
+            <svg class="logo">
+              <use xlink:href="./img/sprites/companies-logos.svg#company-3"></use>
+            </svg>
+            <svg class="logo">
+              <use xlink:href="./img/sprites/companies-logos.svg#company-4"></use>
+            </svg>
+            <svg class="logo">
+              <use xlink:href="./img/sprites/companies-logos.svg#company-5"></use>
+            </svg>
+            <svg class="logo">
+              <use xlink:href="./img/sprites/companies-logos.svg#company-6"></use>
+            </svg>
+          </div>
+          <div class="steps-for-job-box">
+            <h6 class="mini-title">How it works</h6>
+            <div class="flex-box">
+              <div class="content-box">
+                <h2 class="title">Start find a job you love with us easily</h2>
+                <div class="accordion" id="accordionExample">
+                  <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button
+                        class="accordion-button"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne"
+                        aria-expanded="true"
+                        aria-controls="collapseOne"
+                      >
+                        Complete Profile
+                      </button>
+                    </h2>
+                    <div
+                      id="collapseOne"
+                      class="accordion-collapse collapse show"
+                      data-bs-parent="#accordionExample"
+                    >
+                      <div class="accordion-body">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button
+                        class="accordion-button collapsed"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo"
+                        aria-expanded="false"
+                        aria-controls="collapseTwo"
+                      >
+                        Search Vacancies
+                      </button>
+                    </h2>
+                    <div
+                      id="collapseTwo"
+                      class="accordion-collapse collapse"
+                      data-bs-parent="#accordionExample"
+                    >
+                      <div class="accordion-body">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button
+                        class="accordion-button collapsed"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapseThree"
+                        aria-expanded="false"
+                        aria-controls="collapseThree"
+                      >
+                        Apply Job
+                      </button>
+                    </h2>
+                    <div
+                      id="collapseThree"
+                      class="accordion-collapse collapse"
+                      data-bs-parent="#accordionExample"
+                    >
+                      <div class="accordion-body">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="video-box">
+                <img
+                  src="./img/pictures/video-screensaver.jpg"
+                  alt="video-screensaver"
+                  loading="lazy"
+                  width="635"
+                  height="433"
+                />
+                <svg class="play-btn">
+                  <use xlink:href="./../img/sprites/interaction-icons.svg#play-big"></use>
+                </svg>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
