Added 'Why Choose Us' section

--- a/src/index.html
+++ b/src/index.html
@@ -206,6 +206,55 @@
           </div>
         </div>
       </section>
+      <section class="why-choose-us">
+        <div class="wrapper">
+          <div class="flex-box">
+            <h2 class="title">Why Choose Us</h2>
+            <p class="text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+            </p>
+          </div>
+          <div class="cards-box">
+            <article class="card">
+              <div class="icon-box">
+                <svg class="icon">
+                  <use xlink:href="./img/sprites/icon-cards.svg#icon-card-violet"></use>
+                </svg>
+              </div>
+              <h4 class="title">Trusted</h4>
+              <p class="text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna.
+              </p>
+            </article>
+            <article class="card">
+              <div class="icon-box">
+                <svg class="icon">
+                  <use xlink:href="./img/sprites/icon-cards.svg#icon-card-orange"></use>
+                </svg>
+              </div>
+              <h4 class="title">Easy to Use</h4>
+              <p class="text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna.
+              </p>
+            </article>
+            <article class="card">
+              <div class="icon-box">
+                <svg class="icon">
+                  <use xlink:href="./img/sprites/icon-cards.svg#icon-card-purple"></use>
+                </svg>
+              </div>
+              <h4 class="title">Faster</h4>
+              <p class="text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna.
+              </p>
+            </article>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
