Added 'Featured Jobs' section; Pluged slick-slider with jquery

--- a/src/index.html
+++ b/src/index.html
@@ -208,7 +208,7 @@
       </section>
       <section class="why-choose-us">
         <div class="wrapper">
-          <div class="flex-box">
+          <div class="header-box">
             <h2 class="title">Why Choose Us</h2>
             <p class="text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -253,6 +253,249 @@
               </p>
             </article>
           </div>
+        </div>
+      </section>
+      <section class="featured-jobs">
+        <div class="header-box">
+          <h2 class="title">Featured Jobs</h2>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+          </p>
+        </div>
+        <div class="arrows-box"></div>
+        <div class="slick-slider">
+          <div>
+            <div class="card">
+              <div class="more-box">
+                <svg class="more-icon">
+                  <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
+                </svg>
+              </div>
+              <div class="avatar-box">
+                <img
+                  src="./img/people-avatars/person-1.jpg"
+                  alt="person-avatar"
+                  class="avatar"
+                  width="75"
+                  height="75"
+                />
+              </div>
+              <h4 class="speciality">Database Programmer</h4>
+              <p class="team">Marraz Team</p>
+              <div class="conditions-box">
+                <div class="condition">
+                  <p class="salary">$14,000 - $25,000</p>
+                  <span class="info">/monthly</span>
+                </div>
+                <div class="condition">
+                  <p class="location">London, England</p>
+                  <a class="info">View map</a>
+                </div>
+              </div>
+              <div class="buttons-box">
+                <a class="like-btn">
+                  <svg class="icon">
+                    <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
+                  </svg>
+                </a>
+                <a class="apply-btn">Apply Now</a>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card">
+              <div class="more-box">
+                <svg class="more-icon">
+                  <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
+                </svg>
+              </div>
+              <div class="avatar-box">
+                <img
+                  src="./img/people-avatars/person-2.jpg"
+                  alt="person-avatar"
+                  class="avatar"
+                  width="75"
+                  height="75"
+                />
+              </div>
+              <h4 class="speciality">Database Programmer</h4>
+              <p class="team">Marraz Team</p>
+              <div class="conditions-box">
+                <div class="condition">
+                  <p class="salary">$14,000 - $25,000</p>
+                  <span class="info">/monthly</span>
+                </div>
+                <div class="condition">
+                  <p class="location">London, England</p>
+                  <a class="info">View map</a>
+                </div>
+              </div>
+              <div class="buttons-box">
+                <a class="like-btn">
+                  <svg class="icon">
+                    <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
+                  </svg>
+                </a>
+                <a class="apply-btn">Apply Now</a>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card">
+              <div class="more-box">
+                <svg class="more-icon">
+                  <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
+                </svg>
+              </div>
+              <div class="avatar-box">
+                <img
+                  src="./img/people-avatars/person-3.jpg"
+                  alt="person-avatar"
+                  class="avatar"
+                  width="75"
+                  height="75"
+                />
+              </div>
+              <h4 class="speciality">Database Programmer</h4>
+              <p class="team">Marraz Team</p>
+              <div class="conditions-box">
+                <div class="condition">
+                  <p class="salary">$14,000 - $25,000</p>
+                  <span class="info">/monthly</span>
+                </div>
+                <div class="condition">
+                  <p class="location">London, England</p>
+                  <a class="info">View map</a>
+                </div>
+              </div>
+              <div class="buttons-box">
+                <a class="like-btn">
+                  <svg class="icon">
+                    <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
+                  </svg>
+                </a>
+                <a class="apply-btn">Apply Now</a>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card">
+              <div class="more-box">
+                <svg class="more-icon">
+                  <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
+                </svg>
+              </div>
+              <div class="avatar-box">
+                <img
+                  src="./img/people-avatars/person-4.jpg"
+                  alt="person-avatar"
+                  class="avatar"
+                  width="75"
+                  height="75"
+                />
+              </div>
+              <h4 class="speciality">Database Programmer</h4>
+              <p class="team">Marraz Team</p>
+              <div class="conditions-box">
+                <div class="condition">
+                  <p class="salary">$14,000 - $25,000</p>
+                  <span class="info">/monthly</span>
+                </div>
+                <div class="condition">
+                  <p class="location">London, England</p>
+                  <a class="info">View map</a>
+                </div>
+              </div>
+              <div class="buttons-box">
+                <a class="like-btn">
+                  <svg class="icon">
+                    <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
+                  </svg>
+                </a>
+                <a class="apply-btn">Apply Now</a>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card">
+              <div class="more-box">
+                <svg class="more-icon">
+                  <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
+                </svg>
+              </div>
+              <div class="avatar-box">
+                <img
+                  src="./img/people-avatars/person-1.jpg"
+                  alt="person-avatar"
+                  class="avatar"
+                  width="75"
+                  height="75"
+                />
+              </div>
+              <h4 class="speciality">Database Programmer</h4>
+              <p class="team">Marraz Team</p>
+              <div class="conditions-box">
+                <div class="condition">
+                  <p class="salary">$14,000 - $25,000</p>
+                  <span class="info">/monthly</span>
+                </div>
+                <div class="condition">
+                  <p class="location">London, England</p>
+                  <a class="info">View map</a>
+                </div>
+              </div>
+              <div class="buttons-box">
+                <a class="like-btn">
+                  <svg class="icon">
+                    <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
+                  </svg>
+                </a>
+                <a class="apply-btn">Apply Now</a>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card">
+              <div class="more-box">
+                <svg class="more-icon">
+                  <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
+                </svg>
+              </div>
+              <div class="avatar-box">
+                <img
+                  src="./img/people-avatars/person-2.jpg"
+                  alt="person-avatar"
+                  class="avatar"
+                  width="75"
+                  height="75"
+                />
+              </div>
+              <h4 class="speciality">Database Programmer</h4>
+              <p class="team">Marraz Team</p>
+              <div class="conditions-box">
+                <div class="condition">
+                  <p class="salary">$14,000 - $25,000</p>
+                  <span class="info">/monthly</span>
+                </div>
+                <div class="condition">
+                  <p class="location">London, England</p>
+                  <a class="info">View map</a>
+                </div>
+              </div>
+              <div class="buttons-box">
+                <a class="like-btn">
+                  <svg class="icon">
+                    <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
+                  </svg>
+                </a>
+                <a class="apply-btn">Apply Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="btn-box">
+          <a class="apply-btn">View More</a>
         </div>
       </section>
     </main>
