Added 'Pricing Plan' section

--- a/src/index.html
+++ b/src/index.html
@@ -498,6 +498,76 @@
           <a class="apply-btn">View More</a>
         </div>
       </section>
+      <section class="pricing-plan">
+        <div class="wrapper">
+          <div class="header-box">
+            <h2 class="title">Pricing Plan</h2>
+            <p class="text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+            </p>
+          </div>
+          <div class="cards-box">
+            <div class="card">
+              <h4 class="title">FREE</h4>
+              <p class="cost">$0</p>
+              <p class="period">Per month</p>
+              <ul class="favours-list">
+                <li>
+                  <p class="favour">Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li>
+                  <p class="favour">Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li>
+                  <p class="favour">Sed do eiusmod tempor</p>
+                </li>
+              </ul>
+              <div class="buttons-box">
+                <a class="purchase-btn">Purchase Now</a>
+              </div>
+            </div>
+            <div class="card">
+              <h4 class="title">FREE</h4>
+              <p class="cost">$0</p>
+              <p class="period">Per month</p>
+              <ul class="favours-list">
+                <li>
+                  <p class="favour">Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li>
+                  <p class="favour">Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li>
+                  <p class="favour">Sed do eiusmod tempor</p>
+                </li>
+              </ul>
+              <div class="buttons-box">
+                <a class="purchase-btn">Purchase Now</a>
+              </div>
+            </div>
+            <div class="card">
+              <h4 class="title">PLATNIUM</h4>
+              <p class="cost">$500</p>
+              <p class="period">Per month</p>
+              <ul class="favours-list">
+                <li>
+                  <p class="favour">Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li>
+                  <p class="favour">Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li>
+                  <p class="favour">Sed do eiusmod tempor</p>
+                </li>
+              </ul>
+              <div class="buttons-box">
+                <a class="purchase-btn">Purchase Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
