--- a/src/index.html
+++ b/src/index.html
@@ -569,5 +569,115 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="wrapper">
+        <div class="footer-menu">
+          <div class="categories-box">
+            <h3 class="title">Olearn</h3>
+            <ul class="categories">
+              <li><a href="#" class="categories-item">About</a></li>
+              <li><a href="#" class="categories-item">What we offer</a></li>
+              <li><a href="#" class="categories-item">Leadership</a></li>
+              <li><a href="#" class="categories-item">Careers</a></li>
+            </ul>
+          </div>
+          <div class="categories-box">
+            <h3 class="title">Courses</h3>
+            <ul class="categories">
+              <li><a href="#" class="categories-item">Classroom Courses</a></li>
+              <li><a href="#" class="categories-item">Virtual Courses</a></li>
+              <li><a href="#" class="categories-item">E-Learning Courses</a></li>
+              <li><a href="#" class="categories-item">Off Line Courses</a></li>
+            </ul>
+          </div>
+          <div class="categories-box">
+            <h3 class="title">Community</h3>
+            <ul class="categories">
+              <li><a href="#" class="categories-item">Learner</a></li>
+              <li><a href="#" class="categories-item">Partners</a></li>
+              <li><a href="#" class="categories-item">Developers</a></li>
+              <li><a href="#" class="categories-item">Teaching Centre</a></li>
+            </ul>
+          </div>
+          <div class="categories-box">
+            <h3 class="title">Quick Links</h3>
+            <ul class="categories">
+              <li><a href="#" class="categories-item">Home</a></li>
+              <li><a href="#" class="categories-item">Professional Edu</a></li>
+              <li><a href="#" class="categories-item">Courses</a></li>
+              <li><a href="#" class="categories-item">Admissions</a></li>
+            </ul>
+          </div>
+          <div class="categories-box">
+            <h3 class="title">More</h3>
+            <ul class="categories">
+              <li><a href="#" class="categories-item">Press</a></li>
+              <li><a href="#" class="categories-item">Inventors</a></li>
+              <li><a href="#" class="categories-item">Helps</a></li>
+              <li><a href="#" class="categories-item">Terms</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-nav-bar">
+          <a href="#" class="logo-box">
+            <img
+              src="./img/icons/logo.svg"
+              alt="logo"
+              class="logo-image"
+              width="27px"
+              height="25px"
+            />
+            <span class="logo-title">ZIRO</span>
+          </a>
+          <ul class="nav-bar-menu">
+            <li>
+              <a href="#" class="nav-bar-item">Terms of Use</a>
+            </li>
+            <li>
+              <a href="#" class="nav-bar-item">Protfolio</a>
+            </li>
+            <li>
+              <a href="#" class="nav-bar-item">Privacy policy</a>
+            </li>
+            <li>
+              <a href="#" class="nav-bar-item">Contact us</a>
+            </li>
+            <li>
+              <a href="#" class="nav-bar-item">FAQ</a>
+            </li>
+          </ul>
+          <ul class="social-media-box">
+            <li>
+              <a href="#" class="social-media-item" title="facebook" target="_blank">
+                <svg class="icon">
+                  <use xlink:href="./img/sprites/social-media.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="social-media-item" title="instagram" target="_blank">
+                <svg class="icon">
+                  <use xlink:href="./img/sprites/social-media.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="social-media-item" title="twitter" target="_blank">
+                <svg class="icon">
+                  <use xlink:href="./img/sprites/social-media.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="social-media-item" title="youtybe" target="_blank">
+                <svg class="icon">
+                  <use xlink:href="./img/sprites/social-media.svg#youtube"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
