Added 'Statistics' section

--- a/src/index.html
+++ b/src/index.html
@@ -635,6 +635,28 @@
           </div>
         </div>
       </section>
+      <section class="statistics">
+        <div class="wrapper">
+          <div class="statistics-list">
+            <div class="statistic-item">
+              <h4 class="statistic-quantity">36,789</h4>
+              <span class="statistic-name">Talented Freelancer</span>
+            </div>
+            <div class="statistic-item">
+              <h4 class="statistic-quantity">45,973</h4>
+              <span class="statistic-name">Visitors</span>
+            </div>
+            <div class="statistic-item">
+              <h4 class="statistic-quantity">56,461</h4>
+              <span class="statistic-name">Contract Made</span>
+            </div>
+            <div class="statistic-item">
+              <h4 class="statistic-quantity">852k</h4>
+              <span class="statistic-name">Companies</span>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="pricing-plan">
         <div class="wrapper">
           <div class="header-box">
