--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,24 @@
   <body>
     <header>
       <div class="wrapper">
-        <a href="#" class="logo-box">
-          <img
-            src="./img/icons/logo.svg"
-            alt="logo"
-            class="logo-image"
-            width="48px"
-            height="45px"
-          />
-          <span class="logo-title">ZIRO</span>
-        </a>
+        <div class="logo-container">
+          <div class="menu-btn">
+            <div class="line line__1"></div>
+            <div class="line line__2"></div>
+            <div class="line line__3"></div>
+          </div>
+          <a href="#" class="logo-box">
+            <img
+              src="./img/icons/logo.svg"
+              alt="logo"
+              class="logo-image"
+              width="48px"
+              height="45px"
+            />
+            <span class="logo-title">ZIRO</span>
+          </a>
+        </div>
+
         <nav class="nav-bar">
           <ul class="menu-container">
             <li>
@@ -37,6 +45,25 @@
             </li>
             <li>
               <a href="#" class="menu-item">About Us</a>
+            </li>
+          </ul>
+        </nav>
+        <nav class="mobile-menu">
+          <ul class="nav-links">
+            <li class="link">
+              <a href="#">Home</a>
+            </li>
+            <li class="link">
+              <a href="#">Pricing</a>
+            </li>
+            <li class="link">
+              <a href="#">Blog</a>
+            </li>
+            <li class="link">
+              <a href="#">Become a member </a>
+            </li>
+            <li class="link">
+              <a href="#">About Us</a>
             </li>
           </ul>
         </nav>
@@ -197,6 +224,7 @@
                   loading="lazy"
                   width="635"
                   height="433"
+                  class="video-screensaver"
                 />
                 <svg class="play-btn">
                   <use xlink:href="./../img/sprites/interaction-icons.svg#play-big"></use>
@@ -265,232 +293,220 @@
         </div>
         <div class="arrows-box"></div>
         <div class="slick-slider">
-          <div>
-            <div class="card">
-              <div class="more-box">
-                <svg class="more-icon">
-                  <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
-                </svg>
+          <div class="card">
+            <div class="more-box">
+              <svg class="more-icon">
+                <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
+              </svg>
+            </div>
+            <div class="avatar-box">
+              <img
+                src="./img/people-avatars/person-1.jpg"
+                alt="person-avatar"
+                class="avatar"
+                width="75"
+                height="75"
+              />
+            </div>
+            <h4 class="speciality">Database Programmer</h4>
+            <p class="team">Marraz Team</p>
+            <div class="conditions-box">
+              <div class="condition">
+                <p class="salary">$14,000 - $25,000</p>
+                <span class="info">/monthly</span>
               </div>
-              <div class="avatar-box">
-                <img
-                  src="./img/people-avatars/person-1.jpg"
-                  alt="person-avatar"
-                  class="avatar"
-                  width="75"
-                  height="75"
-                />
-              </div>
-              <h4 class="speciality">Database Programmer</h4>
-              <p class="team">Marraz Team</p>
-              <div class="conditions-box">
-                <div class="condition">
-                  <p class="salary">$14,000 - $25,000</p>
-                  <span class="info">/monthly</span>
-                </div>
-                <div class="condition">
-                  <p class="location">London, England</p>
-                  <a class="info">View map</a>
-                </div>
-              </div>
-              <div class="buttons-box">
-                <a class="like-btn">
-                  <svg class="icon">
-                    <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
-                  </svg>
-                </a>
-                <a class="apply-btn">Apply Now</a>
+              <div class="condition">
+                <p class="location">London, England</p>
+                <a class="info">View map</a>
               </div>
             </div>
-          </div>
-          <div>
-            <div class="card">
-              <div class="more-box">
-                <svg class="more-icon">
-                  <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
+            <div class="buttons-box">
+              <a class="like-btn">
+                <svg class="icon">
+                  <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
                 </svg>
-              </div>
-              <div class="avatar-box">
-                <img
-                  src="./img/people-avatars/person-2.jpg"
-                  alt="person-avatar"
-                  class="avatar"
-                  width="75"
-                  height="75"
-                />
-              </div>
-              <h4 class="speciality">Database Programmer</h4>
-              <p class="team">Marraz Team</p>
-              <div class="conditions-box">
-                <div class="condition">
-                  <p class="salary">$14,000 - $25,000</p>
-                  <span class="info">/monthly</span>
-                </div>
-                <div class="condition">
-                  <p class="location">London, England</p>
-                  <a class="info">View map</a>
-                </div>
-              </div>
-              <div class="buttons-box">
-                <a class="like-btn">
-                  <svg class="icon">
-                    <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
-                  </svg>
-                </a>
-                <a class="apply-btn">Apply Now</a>
-              </div>
+              </a>
+              <a class="apply-btn">Apply Now</a>
             </div>
           </div>
-          <div>
-            <div class="card">
-              <div class="more-box">
-                <svg class="more-icon">
-                  <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
-                </svg>
+          <div class="card">
+            <div class="more-box">
+              <svg class="more-icon">
+                <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
+              </svg>
+            </div>
+            <div class="avatar-box">
+              <img
+                src="./img/people-avatars/person-2.jpg"
+                alt="person-avatar"
+                class="avatar"
+                width="75"
+                height="75"
+              />
+            </div>
+            <h4 class="speciality">Database Programmer</h4>
+            <p class="team">Marraz Team</p>
+            <div class="conditions-box">
+              <div class="condition">
+                <p class="salary">$14,000 - $25,000</p>
+                <span class="info">/monthly</span>
               </div>
-              <div class="avatar-box">
-                <img
-                  src="./img/people-avatars/person-3.jpg"
-                  alt="person-avatar"
-                  class="avatar"
-                  width="75"
-                  height="75"
-                />
-              </div>
-              <h4 class="speciality">Database Programmer</h4>
-              <p class="team">Marraz Team</p>
-              <div class="conditions-box">
-                <div class="condition">
-                  <p class="salary">$14,000 - $25,000</p>
-                  <span class="info">/monthly</span>
-                </div>
-                <div class="condition">
-                  <p class="location">London, England</p>
-                  <a class="info">View map</a>
-                </div>
-              </div>
-              <div class="buttons-box">
-                <a class="like-btn">
-                  <svg class="icon">
-                    <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
-                  </svg>
-                </a>
-                <a class="apply-btn">Apply Now</a>
+              <div class="condition">
+                <p class="location">London, England</p>
+                <a class="info">View map</a>
               </div>
             </div>
-          </div>
-          <div>
-            <div class="card">
-              <div class="more-box">
-                <svg class="more-icon">
-                  <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
+            <div class="buttons-box">
+              <a class="like-btn">
+                <svg class="icon">
+                  <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
                 </svg>
-              </div>
-              <div class="avatar-box">
-                <img
-                  src="./img/people-avatars/person-4.jpg"
-                  alt="person-avatar"
-                  class="avatar"
-                  width="75"
-                  height="75"
-                />
-              </div>
-              <h4 class="speciality">Database Programmer</h4>
-              <p class="team">Marraz Team</p>
-              <div class="conditions-box">
-                <div class="condition">
-                  <p class="salary">$14,000 - $25,000</p>
-                  <span class="info">/monthly</span>
-                </div>
-                <div class="condition">
-                  <p class="location">London, England</p>
-                  <a class="info">View map</a>
-                </div>
-              </div>
-              <div class="buttons-box">
-                <a class="like-btn">
-                  <svg class="icon">
-                    <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
-                  </svg>
-                </a>
-                <a class="apply-btn">Apply Now</a>
-              </div>
+              </a>
+              <a class="apply-btn">Apply Now</a>
             </div>
           </div>
-          <div>
-            <div class="card">
-              <div class="more-box">
-                <svg class="more-icon">
-                  <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
-                </svg>
+          <div class="card">
+            <div class="more-box">
+              <svg class="more-icon">
+                <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
+              </svg>
+            </div>
+            <div class="avatar-box">
+              <img
+                src="./img/people-avatars/person-3.jpg"
+                alt="person-avatar"
+                class="avatar"
+                width="75"
+                height="75"
+              />
+            </div>
+            <h4 class="speciality">Database Programmer</h4>
+            <p class="team">Marraz Team</p>
+            <div class="conditions-box">
+              <div class="condition">
+                <p class="salary">$14,000 - $25,000</p>
+                <span class="info">/monthly</span>
               </div>
-              <div class="avatar-box">
-                <img
-                  src="./img/people-avatars/person-1.jpg"
-                  alt="person-avatar"
-                  class="avatar"
-                  width="75"
-                  height="75"
-                />
-              </div>
-              <h4 class="speciality">Database Programmer</h4>
-              <p class="team">Marraz Team</p>
-              <div class="conditions-box">
-                <div class="condition">
-                  <p class="salary">$14,000 - $25,000</p>
-                  <span class="info">/monthly</span>
-                </div>
-                <div class="condition">
-                  <p class="location">London, England</p>
-                  <a class="info">View map</a>
-                </div>
-              </div>
-              <div class="buttons-box">
-                <a class="like-btn">
-                  <svg class="icon">
-                    <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
-                  </svg>
-                </a>
-                <a class="apply-btn">Apply Now</a>
+              <div class="condition">
+                <p class="location">London, England</p>
+                <a class="info">View map</a>
               </div>
             </div>
-          </div>
-          <div>
-            <div class="card">
-              <div class="more-box">
-                <svg class="more-icon">
-                  <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
+            <div class="buttons-box">
+              <a class="like-btn">
+                <svg class="icon">
+                  <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
                 </svg>
+              </a>
+              <a class="apply-btn">Apply Now</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="more-box">
+              <svg class="more-icon">
+                <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
+              </svg>
+            </div>
+            <div class="avatar-box">
+              <img
+                src="./img/people-avatars/person-4.jpg"
+                alt="person-avatar"
+                class="avatar"
+                width="75"
+                height="75"
+              />
+            </div>
+            <h4 class="speciality">Database Programmer</h4>
+            <p class="team">Marraz Team</p>
+            <div class="conditions-box">
+              <div class="condition">
+                <p class="salary">$14,000 - $25,000</p>
+                <span class="info">/monthly</span>
               </div>
-              <div class="avatar-box">
-                <img
-                  src="./img/people-avatars/person-2.jpg"
-                  alt="person-avatar"
-                  class="avatar"
-                  width="75"
-                  height="75"
-                />
+              <div class="condition">
+                <p class="location">London, England</p>
+                <a class="info">View map</a>
               </div>
-              <h4 class="speciality">Database Programmer</h4>
-              <p class="team">Marraz Team</p>
-              <div class="conditions-box">
-                <div class="condition">
-                  <p class="salary">$14,000 - $25,000</p>
-                  <span class="info">/monthly</span>
-                </div>
-                <div class="condition">
-                  <p class="location">London, England</p>
-                  <a class="info">View map</a>
-                </div>
+            </div>
+            <div class="buttons-box">
+              <a class="like-btn">
+                <svg class="icon">
+                  <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
+                </svg>
+              </a>
+              <a class="apply-btn">Apply Now</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="more-box">
+              <svg class="more-icon">
+                <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
+              </svg>
+            </div>
+            <div class="avatar-box">
+              <img
+                src="./img/people-avatars/person-1.jpg"
+                alt="person-avatar"
+                class="avatar"
+                width="75"
+                height="75"
+              />
+            </div>
+            <h4 class="speciality">Database Programmer</h4>
+            <p class="team">Marraz Team</p>
+            <div class="conditions-box">
+              <div class="condition">
+                <p class="salary">$14,000 - $25,000</p>
+                <span class="info">/monthly</span>
               </div>
-              <div class="buttons-box">
-                <a class="like-btn">
-                  <svg class="icon">
-                    <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
-                  </svg>
-                </a>
-                <a class="apply-btn">Apply Now</a>
+              <div class="condition">
+                <p class="location">London, England</p>
+                <a class="info">View map</a>
               </div>
+            </div>
+            <div class="buttons-box">
+              <a class="like-btn">
+                <svg class="icon">
+                  <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
+                </svg>
+              </a>
+              <a class="apply-btn">Apply Now</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="more-box">
+              <svg class="more-icon">
+                <use xlink:href="./img/sprites/interaction-icons.svg#more-details"></use>
+              </svg>
+            </div>
+            <div class="avatar-box">
+              <img
+                src="./img/people-avatars/person-2.jpg"
+                alt="person-avatar"
+                class="avatar"
+                width="75"
+                height="75"
+              />
+            </div>
+            <h4 class="speciality">Database Programmer</h4>
+            <p class="team">Marraz Team</p>
+            <div class="conditions-box">
+              <div class="condition">
+                <p class="salary">$14,000 - $25,000</p>
+                <span class="info">/monthly</span>
+              </div>
+              <div class="condition">
+                <p class="location">London, England</p>
+                <a class="info">View map</a>
+              </div>
+            </div>
+            <div class="buttons-box">
+              <a class="like-btn">
+                <svg class="icon">
+                  <use xlink:href="./img/sprites/interaction-icons.svg#like"></use>
+                </svg>
+              </a>
+              <a class="apply-btn">Apply Now</a>
             </div>
           </div>
         </div>
